# mulle-craft

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePackage.cmake  CMakePackage.txt  LICENSE  README.md  RELEASENOTES.md  install.sh  installer  mulle-build  mulle-craft  mulle-craft-overview.dot  mulle-craft.sublime-project  mulle-install  mulle-sublime
.github/workflows/: semgrep.yml
.mulle/etc/project/: formula-info.sh  version-info.sh
cola/: description.md.bud  info.md.bud  properties.plist  you-are-here.md.bud
dox/: Makefile  dispense-auto.dot  dispense-strict.dot  marks.graphml  mulle-build.md  mulle-clean.md  mulle-git.md  mulle-install.md  mulle-sde-overview.dot  mulle-tag.md  mulle-test.md  mulle-update.md  searchpath.dot
examples/gzappend/: CMakeLists.txt  README.md
examples/gzappend/src/: helloworld.c
examples/helloworld/: CMakeLists.txt  README.md
examples/helloworld/tests/: run-test.sh
mulle-project/: formula-info.sh  generate-formula.sh  version-info.sh
src/: mulle-build-clean.sh  mulle-build-dependencies.sh  mulle-build-execute.sh  mulle-craft-bash-completion.sh  mulle-craft-build.sh  mulle-craft-clean.sh  mulle-craft-craftinfo.sh  mulle-craft-dependencies.sh  mulle-craft-dependency.sh  mulle-craft-donefile.sh  mulle-craft-execute.sh  mulle-craft-log.sh  mulle-craft-path.sh  mulle-craft-qualifier.sh  mulle-craft-search.sh  mulle-craft-searchpath.sh  mulle-craft-status.sh  mulle-craft-style.sh
test/: mock-cmake  mock-make  mock-mulle-make  mock-xcodebuild  run-test
test/01-passthru-build/: cmake.txt  cmake.txt.darwin  mulle-make.txt  mulle-make2.txt  run-test
test/02-sourcetree-build/: cmake2.txt  cmake2.txt.darwin  mulle-make.txt  mulle-make2.txt  mulle-make3.txt  run-test
test/02-sourcetree-build/src/: CMakeLists.txt
test/03-sdk-platform/: craftorder  run-test
test/03-sdk-platform/foreign-project/: CMakeLists.txt
test/04-callbacks/: run-test
test/04-callbacks/.mulle/etc/craft/: callback-complete  callback-inited
test/05-style/: expect.linux  expect.macos  run-test
tests/: mock-cmake  mock-make  run-test
tests/01-passthru-build/: run-test
tests/02-sourcetree-build/: .mulle-sourcetree  run-test
tests/02-sourcetree-build/.mulle-sourcetree/etc/: config
tests/02-sourcetree-build/src/: CMakeLists.txt
